[gd_scene load_steps=10 format=3 uid="uid://ccemwlp46dedi"]

[ext_resource type="FontFile" uid="uid://cjlbqm5nqc440" path="res://Fonts/Kogo_font_v1-Regular.ttf" id="1"]
[ext_resource type="Script" path="res://Scripts/Misc/SpeechBox.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://834ogjatskl5" path="res://Audio/WorldSFX/voidspeech.mp3" id="3"]

[sub_resource type="StyleBoxEmpty" id="3"]

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.415686, 0.32549, 0.32549, 0)

[sub_resource type="StyleBoxFlat" id="5"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="6"]
default_font = SubResource("2")
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_color_hover = Color(0, 0, 0, 1)
Button/styles/focus = SubResource("3")
Button/styles/hover = SubResource("4")
Button/styles/normal = SubResource("1")
Button/styles/pressed = SubResource("5")

[node name="SpeechBox" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -385.0
offset_top = -488.0
offset_right = 1183.0
offset_bottom = -61.0
theme = SubResource("6")
script = ExtResource("2")

[node name="Label" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 128
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="LetterTimer" type="Timer" parent="."]
one_shot = true

[node name="SayTimer" type="Timer" parent="."]
one_shot = true

[node name="SpeechSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")
volume_db = -16.605

[connection signal="timeout" from="LetterTimer" to="." method="_on_LetterTimer_timeout"]
[connection signal="timeout" from="SayTimer" to="." method="_on_SayTimer_timeout"]
